lab2/thefuture/style.css
:root {
    --red: #f83259;
    --blue: #63f6f3;
    --yellow: #ffff04;
}

* {
    box-sizing: border-box;
}

body {
    padding: 1em;
}

.container {
    display: grid;
    gap: 1em;
}

.card {
    font-weight: bold;
    font-size: 1.25em;
    text-align: center;
    padding: 2em;
    display: flex;
    align-items: center;
    justify-content: center;
}

.homework {
    background-color: var(--red);
}

.broken {
    background-color: var(--blue);
}

.cloud {
    background-color: var(--yellow);
}

@media(min-width: 460px) {
    .container {
        grid-template-columns: 50% 50%;
    }
}

@media(min-width: 900px) {
    .container {
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: repeat(3, 1fr);
    }

    .broken {
        grid-column: 3 / 4;
        grid-row: 1 / 4;
    }

    .cloud {
        grid-column: 4 / 6;
        grid-row: 2 / 4;
    }

    
}

